@startuml
'https://plantuml.com/class-diagram

skinparam packageStyle rectangle
skinparam linetype ortho

package "Qv2Core Interfaces" {

    enum Qv2Buffer_Type {
        EMPTY
        LINEAR
        GRAPHIC
    }

    class Qv2Buffer {
        + type(): Qv2Buffer_Type
        + linearBlocks(): vector<shared_ptr<Qv2Block1D>>
        + graphicBlocks(): vector<shared_ptr<Qv2Block2D>>
        {static} + CreateLinearBuffer(block): shared_ptr<Qv2Buffer>
        {static} + CreateGraphicBuffer(block): shared_ptr<Qv2Buffer>
    }

    class Qv2Block1D {
        - mData: uint8_t*
        - mSize: size_t
        - mCapacity: size_t
        + data(): uint8_t*
        + size(): size_t
        + capacity(): size_t
        + setSize(size: size_t): void
    }

    enum Qv2NumPlane {
        PLANE_Y = 0
        PLANE_U = 1
        PLANE_V = 2
        PLANE_R = 0
        PLANE_G = 1
        PLANE_B = 2
        PLANE_A = 3
        PLANE_UV = 1
        MAX_NUM_PLANES = 4
    }

    class Qv2Block2D {
        - mWidth: uint32_t
        - mHeight: uint32_t
        - mBitDepth: uint32_t
        - mFormat: uint32_t
        - mNumPlanes: uint32_t
        - mAddr: uint8_t*[MAX_NUM_PLANES]
        - mStride: uint32_t[MAX_NUM_PLANES]
        - mElevation: uint32_t[MAX_NUM_PLANES]
        + width(): uint32_t
        + height(): uint32_t
        + bitDepth(): uint32_t
        + format(): uint32_t
        + numPlanes(): uint32_t
        + addr(index: uint32_t): uint8_t*
        + stride(index: uint32_t): uint32_t
        + elevation(index: uint32_t): uint32_t
        + setPlane(index, addr, stride, elevation): void
    }

    struct Qv2Work {
        + input: shared_ptr<Qv2Buffer>
        + output: shared_ptr<Qv2Buffer>
        + recon: shared_ptr<Qv2Buffer>
        + timestamp: uint64_t
        + frameIdx: uint64_t
        + flags: uint32_t
        + result: int
        + hdrMetadata: Qv2HdrStaticMetadata
        + colorAspects: Qv2ColorAspect
    }

    enum Qv2WorkFlags {
        QV2_WORK_FLAG_NONE = 0
        QV2_WORK_FLAG_EOS = 1
    }

    abstract class Qv2Component {
        # mName: string
        # mListener: Listener*
        # mState: atomic<State>
        # mIsRec: bool
        + getName(): string
        + getState(): State
        + setState(state: State): void
        + setListener(listener: Listener*): void
        + enableRecon(enable: bool): void
        + {abstract} getVersion(): string
        + {abstract} configure(params: vector<Qv2Param*>): Qv2Status
        + {abstract} query(params: vector<Qv2Param*>): Qv2Status
        + {abstract} queue(items: vector<unique_ptr<Qv2Work>>): Qv2Status
        + {abstract} start(): Qv2Status
        + {abstract} stop(): Qv2Status
        + {abstract} flush(): Qv2Status
        + release(): void
        # onStateChanged(state: State): void
        # {abstract} onRelease(): void
    }

    class Qv2ComponentFactory {
        {static} + createByType(type: ComponentType): shared_ptr<Qv2Component>
        {static} + createByName(name: string): shared_ptr<Qv2Component>
    }

    enum ComponentType {
        ENCODER_APV
        DECODER_APV
    }

    interface Qv2Component_Listener {
        + {abstract} onWorkDone(component, workItems: vector<unique_ptr<Qv2Work>>): void
        + {abstract} onError(component, error: Qv2Status): void
        + onStateChanged(component, newState): void
    }

    enum Qv2Component_State {
        UNINITIALIZED
        INITIALIZED
        CONFIGURED
        STARTING
        RUNNING
        FLUSHING
        PAUSED
        STOPPING
        STOPPED
        RELEASING
        ERROR
    }

    abstract class Qv2Param {
        + mId: uint32_t
        + mSize: size_t
        + {static} makeId(scope, kind, index): uint32_t
        + {static} cast<T>(param): T*
    }

    package "Metadata & Constants" {
        struct Qv2HdrStaticMetadata
        struct Qv2ColorAspect
    }

    package "Specific Parameter Examples" {
        class Qv2VideoSizeInput
        class Qv2BitrateSetting
    }

    enum Qv2Status {
        QV2_OK = 0
        ...
        QV2_ERR_INTERNAL = -402
    }
}

' Relationships
Qv2Buffer o-- Qv2Block1D
Qv2Buffer o-- Qv2Block2D
Qv2Buffer +-- Qv2Buffer_Type
Qv2Block2D ..> Qv2NumPlane : uses

Qv2Work o-- Qv2Buffer
Qv2Work +-- Qv2WorkFlags
Qv2Work ..> Qv2HdrStaticMetadata : contains
Qv2Work ..> Qv2ColorAspect : contains

Qv2ComponentFactory ..> Qv2Component : creates
Qv2ComponentFactory +-down- ComponentType

Qv2Component +-down- Qv2Component_State
Qv2Component +-right- Qv2Component_Listener
Qv2Component ..> Qv2Work : processes
Qv2Component ..> Qv2Param : configured by

Qv2Param <|-- Qv2VideoSizeInput
Qv2Param <|-- Qv2BitrateSetting

@enduml
